--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
