--- a/front_end/package.json
+++ b/front_end/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
@@ -20,6 +22,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^6.2.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
